	  closed with </font> (or, like before, with the generic poper).
	* Textblock: Add support for out-of-order tag openers/closers.
	  Markup sequences like <b><i></b></i> are now legal and work as
	  expeceted.

2011-07-28  Tom Hacohen (TAsn)

	* Textblock: Added support for quoting format parameters.
	  Formats like: <font='Sans' color='#FFF'> are now legal.
	* Textblock: Added font_weight and font_style formats.
	  These format allow overriding the font style set using:
	  font=':style=Bold'.

2011-07-31  Tom Hacohen (TAsn)

	* Textblock: Added font_width.
	  This allows overriding the font width set using:
	  font=':style=Condensed'

2011-08-01  Tom Hacohen (TAsn)

	* Textblock: Added lang to markup to set the lang of the text.

2011-08-09  Tom Hacohen (TAsn)

	* Textblock: Added evas_textblock_cursor_range_formats_get which
	returns the formats inside a range.
	* Textblock: Added evas_textblock_cursor_visible_range_get which
	updates the cursors to the ends of the area currently visible on
	screen.

2011-08-17  Tom Hacohen (TAsn)

	* Callbacks: Added priority support to callbacks.

2011-08-23  Cedric Bail

	* Fix evas_object_image_data_convert.
	* Add YUV 601 input format to evas_object_image_data_convert.

2011-08-29  Cedric Bail

	* Add colorspaces NV12 and MT12 (64 * 32 macro block tiled
	format, see Linux videodev documentation for more information).

2011-10-17  Shilpa Singh

	* Textblock: Added underline=dashed support.
	Tag changes:
	 - dashed is a legal value for underline
	New tags:
	 - underline_dash_color
	 - underline_dash_width
	 - underline_dash_gap

2011-10-21  Carsten Haitzler (The Rasterman)

	* Add function to request what the largest possible image (or texture)
        size is from evas.

2011-10-27  ChunEon Park (Hermet)

	* Add evas_object_freeze_events_set/get to discard the object events.
	they will be useful some cases such as transition.

2011-11-02 Nicolas Aguirre
	* Add gl_cocoa engine
